Fix nav spacing

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
 
 header {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  padding: 30px;
+  padding: 3rem 1rem;
 }
 
 /* nav {
@@ -15,20 +15,17 @@ header {
 } */
 
 nav ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   list-style-type: none;
-  margin: 0;
-  padding: 0;
   font-size: 2rem;
-}
-
-nav ul li {
-  display: inline;
-  margin-right: 10px;
 }
 
 nav ul li a {
   color: #fff;
   text-decoration: none;
+  padding: 1rem;
 }
 
 .hero-image-container {
